--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -21,8 +21,8 @@
       <aq-toolbar class="paper-header" showMenu="[[showmenu]]"></aq-toolbar> 
       <div>
         <aq-community-search></aq-community-search>
-        <!-- <aq-community-results></aq-community-results> -->
-        <aq-community-topics></aq-community-topics>
+        <aq-community-results></aq-community-results>
+        <!-- <aq-community-topics></aq-community-topics> -->
       </div>
     </paper-scroll-header-panel>
   </template>
