Working on results after search

--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../components/aq-toolbar.html">
 <link rel="import" href="../components/aq-community-search.html">
 <link rel="import" href="../components/aq-community-results.html">
+<link rel="import" href="../components/aq-community-all-results.html">
 <link rel="import" href="../components/aq-community-topics.html">
 
 <dom-module id="aq-community-main">
@@ -21,6 +22,7 @@
       <aq-toolbar class="paper-header" showMenu="[[showmenu]]"></aq-toolbar> 
       <div>
         <aq-community-search></aq-community-search>
+        <aq-community-all-results></aq-community-all-results>
         <aq-community-results></aq-community-results>
         <!-- <aq-community-topics></aq-community-topics> -->
       </div>
