--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -22,8 +22,7 @@
       <aq-toolbar class="paper-header" showMenu="[[showmenu]]"></aq-toolbar> 
       <div>
         <aq-community-search></aq-community-search>
-        <aq-community-all-results></aq-community-all-results>
-        <aq-community-results></aq-community-results>
+        <aq-community-all-results topicheading="My New Topic" authorname="Sahil Upadhyay" authoraddress="sahil.upadhyay" postdate="Jan 16, 2016" totalreplies="26" totalviews="50" postcategory="FAQs"></aq-community-all-results>
         <!-- <aq-community-topics></aq-community-topics> -->
       </div>
     </paper-scroll-header-panel>
