--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -18,6 +18,7 @@
   <template>
      <app-router id="community-router" trailingSlash="ignore">
         <app-route path="/dashboard/community" element='aq-community-home'></app-route>
+        <!-- <app-route path="/dashboard/community/topic" element='aq-community-topics'></app-route> -->
      </app-router>  
   </template>
 
