--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -2,6 +2,8 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
+<link rel="import" href="./aq-user-menu.html">
+
 
 <dom-module id="aq-toolbar">
   <style is="custom-style" include="iron-flex iron-positioning"></style>
@@ -18,6 +20,10 @@
       opacity: var(--dark-primary-opacity);
       border-bottom: 1px solid #e0e0e0;
     }
+
+    #profile {
+      right:0;
+    }
    
   </style>
 
@@ -28,6 +34,8 @@
           <paper-icon-button noink icon="icons:menu" on-tap="toggleMenu"></paper-icon-button>
           <div class="title">AimsQuant</div>
         </template>
+        <div class="flex"></div>
+        <aq-user-menu></aq-user-menu>
       </paper-toolbar>
 
   </template>
