Added new editor elements

--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -5,6 +5,8 @@
 <link rel='import' href='../../bower_components/app-router/app-router.html'>
 
 <link rel="import" href="../components/aq-toolbar.html">
+<link rel="import" href="../components/editor/aq-editor-home.html">
+<link rel="import" href="../components/editor/aq-editor-edit.html">
 
 
 <dom-module id="aq-editor-main">
@@ -15,6 +17,11 @@
     }
   </style>
   <template>
+     <app-router id="editorrouter" mode="hash" trailingSlash="ignore">
+        <app-route path="/dashboard/editor" element='aq-editor-home' bindrouter=""></app-route>
+        <app-route path="/dashboard/editor/*" element='aq-editor-edit' bindrouter="">
+        </app-route>
+     </app-router>
   </template>
 
   <script>
