--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -36,7 +36,7 @@
 <dom-module id="aq-community-home">
   <template>
       <div class="results">
-        <aq-community-all-results topicaddress="#/dashboard/community/topics" topicheading= "My new topics" authorname="Sahil Upadhyay" authoraddress= "sahil" postdate="jan 15, 2015" totalreplies="16" totalviews="90" postcategory="FAQs"></aq-community-all-results>
+        <aq-community-all-results></aq-community-all-results>
       </div>
   </template>>
 </dom-module>  
