--- a/src/components/community/aq-community-searchbar.html
+++ b/src/components/community/aq-community-searchbar.html
@@ -27,7 +27,7 @@
 		  line-height: 46px;
 		  border: 0;
 		  margin: 0;
-		  padding-left: 5px;
+		  padding-left: 110px;
 		  border: 1px solid #e5e5e5;
 		  @apply(--paper-font-body1);
 		  width:100%;
@@ -50,10 +50,11 @@
 	      --color: white;
 	      border: 1px solid #e5e5e5;
 	      border-radius: 0px;
-	      width: 100px;
+	      width: 220%;
 	    }
 
 	    paper-menu {
+	    	cursor: pointer;
 	      --display: block;
 	    }
 
@@ -69,29 +70,37 @@
 	    	top:-2px;
 	    	--left:2px;
 	    }
-
 	 	paper-button #content iron-icon {
-	    	position::absolute;
-	    	top:-2px;
-	    	left:30px;
+	    	position:fixed;
+	    	top: 100px;
+	    	left: 380px;
 	    }
-		
-	    
+		input:focus {
+ 		   outline:none;
+		}
+		.keyboard-focus {
+			font-weight: normal;
+		}
+		#category {
+			width: 50px
+		}
 	</style>
 	
 	<template>
       		<div id="search" class="layout horizontal">
 	      		<paper-menu-button id="button">
 	        		<paper-button noink class="dropdown-trigger">
-	        			<div id='content'><span>All</span>
-	        			<iron-icon icon="icons:arrow-drop-down"></iron-icon></div>  
+	        			<div id='content'>
+	        				<span id="category">{{selectedcategory}}</span>
+	        				<iron-icon icon="icons:arrow-drop-down"></iron-icon>
+	        			</div>  
 	        		</paper-button>
 	        		
-	        		<paper-menu class="dropdown-content">
-	        			<paper-item>All</paper-item>
-	        			<paper-item>Category 1</paper-item>
-	        			<paper-item>Category 2</paper-item>
-	        			<paper-item>Category 3</paper-item>
+	        		<paper-menu class="dropdown-content" attr-for-selected="value" selected="{{selection}}" on-click="handleClick" keyboard-focus="false">
+	        		 	<paper-item value="Everywhere">Everywhere</paper-item>
+	        			<paper-item value="Category 1">Category 1</paper-item>
+	        			<paper-item value="Category 2">Category 2</paper-item>
+	        			<paper-item value="Category 3">Category 3</paper-item>
 	        		</paper-menu>
 	    		</paper-menu-button>
     		
@@ -104,7 +113,20 @@
 	<script >
 		Polymer({
 			is: 'aq-community-searchbar',
+			handleClick: function (e) {
+			console.log("You clicked the item with value = " + e.target.getAttribute("value"));
+			this.selectedcategory= e.target.getAttribute("value");
+			},
+			properties: {
+				selectedcategory : {
+						type: String,
+						value: "Everywhere",
+				},
+			},
+
 		});
+		
+
 	</script>
 </dom-module>
 
